--- a/package.json
+++ b/package.json
@@ -10,8 +10,16 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
+    "@nomicfoundation/hardhat-chai-matchers": "^2.0.0",
+    "@nomicfoundation/hardhat-ethers": "^3.0.0",
+    "@nomicfoundation/hardhat-ignition": "^0.15.0",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.0",
+    "@nomicfoundation/hardhat-network-helpers": "^1.0.0",
+    "@nomicfoundation/hardhat-verify": "^2.0.0",
     "@onflow/fcl": "^1.20.1",
     "@onflow/react-sdk": "^0.10.2",
+    "@openzeppelin/contracts": "^5.4.0",
+    "@openzeppelin/hardhat-upgrades": "^3.9.1",
     "@radix-ui/react-accordion": "^1.2.12",
     "@radix-ui/react-alert-dialog": "^1.1.15",
     "@radix-ui/react-aspect-ratio": "^1.1.7",
@@ -42,11 +50,17 @@
     "@tanstack/react-query": "5.45.1",
     "@tanstack/react-router": "^1.131.36",
     "@tanstack/react-router-devtools": "^1.131.36",
+    "@typechain/ethers-v6": "^0.5.0",
+    "@types/chai": "^4.2.0",
+    "@types/mocha": ">=9.1.0",
+    "chai": "^4.2.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "dotenv": "^17.2.2",
     "embla-carousel-react": "^8.6.0",
+    "hardhat-gas-reporter": "^2.3.0",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.543.0",
     "next-themes": "^0.4.6",
@@ -56,23 +70,31 @@
     "react-hook-form": "^7.62.0",
     "react-resizable-panels": "^3.0.5",
     "recharts": "2.15.4",
+    "solidity-coverage": "^0.8.0",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "tailwindcss": "^4.1.13",
+    "ts-node": ">=8.0.0",
     "vaul": "^1.1.2",
     "viem": "latest",
     "wagmi": "latest",
     "zod": "^4.1.5"
   },
   "devDependencies": {
+    "@nomicfoundation/hardhat-toolbox": "^6.1.0",
+    "@nomiclabs/hardhat-ethers": "^2.2.3",
     "@tanstack/router-plugin": "^1.131.36",
+    "@typechain/hardhat": "^9.1.0",
     "@types/node": "^24.3.1",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@wagmi/cli": "latest",
     "buffer": "^6.0.3",
+    "ethers": "^6.15.0",
+    "hardhat": "^2.14.0",
     "tw-animate-css": "^1.3.8",
+    "typechain": "^8.3.2",
     "typescript": "^5.8.3",
     "vite": "^5.2.11"
   }
