Updated the Contract Info and Compiled The Contract...

--- a/package.json
+++ b/package.json
@@ -6,7 +6,14 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "compile": "bun hardhat compile",
+    "test": "bun hardhat test",
+    "test:magix": "bun hardhat test test/MagixCrowdfunding.js",
+    "test:watch": "bun hardhat test --watch",
+    "deploy:local": "bun hardhat ignition deploy ignition/modules/MagixCrowdfunding.js --network hardhat",
+    "deploy:flow-testnet": "bun hardhat ignition deploy ignition/modules/MagixCrowdfunding.js --network flow",
+    "deploy:flow-mainnet": "bun hardhat ignition deploy ignition/modules/MagixCrowdfunding.js --network flowTestnet"
   },
   "dependencies": {
     "@hookform/resolvers": "^5.2.1",
