--- a/package.json
+++ b/package.json
@@ -97,7 +97,7 @@
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@wagmi/cli": "latest",
+    "@wagmi/cli": "^2.5.1",
     "buffer": "^6.0.3",
     "ethers": "^6.15.0",
     "hardhat": "^2.14.0",
