--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,9 @@
-VITE_WC_PROJECT_ID=your_wallet_connect_id_here
+# Vite Environment Variables (must start with VITE_)
+VITE_MAGIX_TESTNET_CONTRACT_ADDRESS=0x...
+VITE_MAGIX_MAINNET_CONTRACT_ADDRESS=0x...
+
+# WalletConnect Project ID
+VITE_WC_PROJECT_ID=your_walletconnect_project_id
+
+# Hardhat/Backend variables
 FLOW_WALLET_PRIVATE_KEY=your_private_key_here
