--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ VITE_WC_PROJECT_ID=your_walletconnect_project_id
 
 # Hardhat/Backend variables
 FLOW_WALLET_PRIVATE_KEY=your_private_key_here
+
+# Pinata API credentials
+VITE_PINATA_JWT=your_pinata_jwt_token_here
