--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "embla-carousel-react": "^8.6.0",
     "hardhat-gas-reporter": "^2.3.0",
     "input-otp": "^1.4.2",
+    "lineicons-react": "^2.0.0",
     "lucide-react": "^0.543.0",
     "next-themes": "^0.4.6",
     "pinata-web3": "^0.5.4",
