--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "bun wagmi generate && vite dev",
+    "dev": "vite dev",
+    "wagmi:generate": "wagmi generate",
     "build": "tsc && vite build",
     "preview": "vite preview",
     "hardhat:compile": "bun hardhat compile",
